# vla-course

./: .gitignore  COURSE_OUTLINE.md  README.md  index.html  openvla-architecture.html
codes/: pyproject.toml
codes/outputs/eval/2026-06-30/12-23-49_libero_smolvla/: eval_info.json
codes/outputs/eval/2026-06-30/14-50-39_libero_pi05/: eval_info.json
codes/outputs/eval/2026-06-30/16-05-32_libero_pi05/: eval_info.json
codes/step1_basics/: action_discretize.py  token_encode_decode.py
codes/step2_sim/: libero_action_test.py  libero_task_explorer.py  mujoco_arm_basics.py  mujoco_minimal.py  run_libero_demo.py  sim_vla_arm.py
codes/step3_openvla/: run_openvla_libero.py
codes/step4_l40/: gpu_test.py
codes/step4_openvla/: run_openvla_libero.py
codes/step5_smolvla/: __init__.py  eval_libero.py  train.py
codes/step6_pi0/: sim_pi0_arm.py
codes/step7_gemini/: deploy_model.py
docs/: issues.md
docs/md/: chapter_1.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  vla-course-full.md
models/: widowx_arm.xml
scripts/: export_md.py
